<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/profile"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="20"
        android:hint="@string/enter_user_name_here"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_image" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="20"
        android:fitsSystemWindows="false"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#546E7A"

        app:layout_constraintEnd_toEndOf="@+id/user_name"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <EditText
        android:id="@+id/user_mobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="20"
        android:hint="Enter Mobile"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/user_email"
        app:layout_constraintStart_toStartOf="@+id/user_email"
        app:layout_constraintTop_toBottomOf="@+id/user_email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="20"
        android:hint="Enter Password"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/user_mobile"
        app:layout_constraintStart_toStartOf="@+id/user_mobile"
        app:layout_constraintTop_toBottomOf="@+id/user_mobile" />

    <EditText
        android:id="@+id/password_confirmation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="20"
        android:hint="Confirm Password"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="@+id/password_confirmation"
        app:layout_constraintStart_toStartOf="@+id/password_confirmation"
        app:layout_constraintTop_toBottomOf="@+id/password_confirmation" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Alrady Have Account ?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn" />

    <Button
        android:id="@+id/login_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:textColorHint="#546E7A"

        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <ImageView
        android:id="@+id/select_img_register"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_image"
        app:layout_constraintEnd_toEndOf="@+id/user_image"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/user_image"
        app:layout_constraintTop_toTopOf="@+id/user_image"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/edit" />
</androidx.constraintlayout.widget.ConstraintLayout>